- storage mode for RKWard meta data was changed -> TODO
- RMB option to search help on objects from packages in object browser
- show tooltip information on objects in object browser
- do not crash on call to "browser ()"
- the object browser is updated automatically when needed
- allow some more configuration in object browser
- include all package environments in object list
- use more efficient data passing to synchronize object list
- add (ugly) items for functions and lists to object browser
- internal cleanups (partially to make porting to KDE4/Qt4 easier)
- when saving/loading the workspace, save / restore all windows (not just data editors)
- remember workspace url after save as
- fix a long standing (but hard to trigger) crash while closing data editor window
- fix "Open R Script File" filename ending filter
- add mismatching brace detection to syntax highlighting
- yet another crash on more than 100 rows bug fixed
- RKWard should now be fully UTF-8 aware. All characters are passed to and from R reliably

--- Version 0.3.7 - Sep-17-2006
- added Turkish translation
- avoid lockups when cancelling a readline ()
- show output context (if any) when the backend asks for input via readline ()
- link against libRblas.so if it is found in the R libs dir (needed for some compiles of R 2.4.0)
- remove whitespace from start and end of plugin generated commands and do not evaluate empty commands
- do not raise the command log more than once for a given command producing continuous output
- small improvements to command history in console
- deal better with commands producing large amounts of output
- small fixes in several plugins
- package installation/update: semi-automate package installation in response to "require ()" calls
- package installation/update: the online list of available packages is cached up to one hour (and only as long as the relevant options are unchanged)
- package installation/update: give better progress indication