@@ -69,12 +69,9 @@ UI-stuff
 
 Internal stuff:
 	RKVariable:
-		- the storage mechanism for invalid values (and the type detection) is flawed. The following should be done instead:
-			- R storage type is always == RKWard data type.
-			- Invalid values are stored in a list in an attribute of the variable in question
-			- The corresponding "real" fields are set to NA
-			- Need to add a conversion script. See .rk.get.meta (). Both should be changed at the same time.
-				- Not really, it's already broken, currently, after save / reload
+		- Need to add a conversion script. See .rk.get.meta (). Both should be changed at the same time.
+			-Or was it already broken, before?
+		- True Support for Logicals
 	- maybe we can do stuff like auto-printing, (toplevel handlers: no, not those, they are not called in R_ReplDLLdo1 ()), syntax error information by using R_ReplDLLdo1 () for user/console commands. The command-text would be fed in via R_ReadConsole (would need to keep a buffer).
 			- How to differentiate readline calls to get new command data from readline calls to get user info?! The prompt may not be realiable enough. Is there other info?
 				- the hist parameter may be a hint, but is also set in do_browser
