@@ -293,9 +293,9 @@
 		} else {
 			type <- 32
 			if (is.factor (x)) type <- type + 32768			# 2 << 14
-			else if (is.logical (x)) type <- type + 65536		# 4 << 14
 			else if (is.numeric (x)) type <- type + 16384		# 1 << 14
 			else if (is.character (x)) type <- type + 49152		# 3 << 14
+			else if (is.logical (x)) type <- type + 65536		# 4 << 14
 		}
 	}
 	if (!is.null (attr (x, ".rk.meta"))) type = type + 4096
